# prompt-tuning

./: .gitignore  .pre-commit-config.yaml  benchmark_datamodule.py  cli.py  config.yaml  kaggle-tpu-setup.sh  local_types.py  main.py  main_xla_fsdp.py  metrics.py  model.py  models.py  notes.md  objective.md  pyproject.toml  pytest.ini  run.py  setup.sh  setup_kaggle_tpu.sh  task.py  tasks.py  test_data.py  test_tokenizer.py  tinker.ipynb  tinker.py  tokenizer.py  util.py
config/: base.yaml  dev.yaml  dummy.py  dummy_khs.py  ket5-base-khs.yaml  ket5-base-lora-khs.yaml  ket5-large-lora-khs.yaml  ket5-small-khs-gpu.yaml  ket5-small-khs.py  ket5-small-khs.yaml  ket5-small-nsmc-with-validation.yaml  ket5_base_khs.py  ket5_base_lora_khs.py  ket5_base_nsmc.py  ket5_large_khs.py  ket5_large_lora_khs.py  ket5_small_khs.py  ket5_small_nsmc.py  kogpt2_khs_dev.py  wish.yaml
config.old/: ket5-base-khs.yaml  ket5-base-lora-khs.yaml  ket5-large-khs.yaml
config/env/: gpu.py  (+12 more)
data/: __init__.py  core.py  datamodule.py  feature_converter.py  feature_converters.py  metrics.py  pipes.py  postprocessor.py  postprocessors.py  pre-tokenize.py  sources.py
model/: __init__.py  base.py  ket5.py
notebook/: kaggle_gpu.ipynb  kaggle_tpu.ipynb  kaggle_tpu_pjrt.ipynb  kaggle_xla_fsdp.ipynb
t2tpipe/: __init__.py  base.py  core.py  dataclass.py  datamodule.py  datapipe.py  datasource.py  feature_converter.py  metric.py  mixin.py  plan.md  postprocessor.py  registry.py  setup.py  tokenizer.py  type.py  util.py
test/: test_data.py  test_datamodule.py  test_dummy.py  test_feature_converter.py
(+28 files in other folders)
